--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx server/index.ts",
+    "dev": "run-p dev:api dev:ui",
+    "dev:api": "tsx server/index.ts",
+    "dev:ui": "cd dashboard && vite --host",
+    "build:ui": "cd dashboard && vite build",
     "cli": "tsx tools/cli/index.ts",
     "conf": "tsx tools/cli/index.ts conformance",
     "demo:good": "tsx tools/cli/index.ts demo good",
@@ -11,15 +14,29 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
+    "@fastify/cors": "^8.5.0",
     "@solana/web3.js": "^1.95.2",
     "ajv": "^8.12.0",
     "bn.js": "^5.2.2",
     "commander": "^12.1.0",
     "fastify": "^4.27.2",
-    "fastify-raw-body": "^4.2.0"
+    "fastify-raw-body": "^4.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13",
+    "@types/tweetnacl": "^1.0.5",
     "tsx": "^4.19.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite": "^7.1.12"
   }
 }
