feat: add CLI demo:stream and complete all documentation
CLI enhancements:
- Add demo:stream command with timeline visualization
- Add trace verification checks (traceSaved, traceValid)
- Add mirror signature verification (mirrorSigValid)
- Update package.json with demo:stream script

Documentation updates:
- CONTRACTS.md: Add bond and latency instructions, update test coverage
- SERVER.md: Document /api/good_stream, trace/mirror signatures, new API fields
- CLI.md: Document demo:stream and new conformance checks
- DEMO.md: Add comprehensive Differentiators section for all 5 new features
- QA.md: Add checklist items for trace/stream/bond/latency/mirrors

All backend functionality documented and CLI complete

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cli": "tsx tools/cli/index.ts",
     "conf": "tsx tools/cli/index.ts conformance",
     "demo:good": "tsx tools/cli/index.ts demo good",
-    "demo:bad": "tsx tools/cli/index.ts demo bad"
+    "demo:bad": "tsx tools/cli/index.ts demo bad",
+    "demo:stream": "tsx tools/cli/index.ts demo stream"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
