fix: use correct build command for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd dashboard && pnpm install && pnpm build",
+  "buildCommand": "pnpm build:ui",
   "outputDirectory": "dashboard/dist",
   "installCommand": "pnpm install",
   "framework": "vite",
