fix: configure vite to output to project root dist for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "pnpm build:ui",
-  "outputDirectory": "dashboard/dist",
+  "outputDirectory": "dist",
   "installCommand": "pnpm install",
   "rewrites": [
     {
