--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:api": "tsx server/index.ts",
     "dev:ui": "cd dashboard && vite --host",
     "build:ui": "cd dashboard && vite build",
+    "start": "tsx server/index.ts",
     "cli": "tsx tools/cli/index.ts",
     "conf": "tsx tools/cli/index.ts conformance",
     "demo:good": "tsx tools/cli/index.ts demo good",
